Utilize asset pipeline and API routes; Remove ignored files

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
   <h4>This is your access token:</h4>
   <p><code><%= current_user.api_key.secret_token %></code> Keep It secret.</p>
   <h4>Test it out in your favorite terminal:</h4>
-  <blockquote>curl -i <%= "#{request.protocol}#{request.env["SERVER_NAME"]}:#{request.env["SERVER_PORT"]}" %>/api/v1/items/?access_token=<%= current_user.api_key.secret_token %></blockquote>
+  <blockquote>curl -i <%= "#{v1_api.items_url}" %>/?access_token=<%= current_user.api_key.secret_token %></blockquote>
   <div id="app-info">
     <h3>An API Client Application has been registered</h3>
     <h4>Application Id:</h4>
@@ -52,75 +52,5 @@
   <div id="api-ready" style="display:none">
     <p><code><span class="token"></span></code> Keep it secret.</p>
     <h4>Test it out in your favorite terminal:</h4>
-    <blockquote>curl -i http://20.dpla.berkman.temphost.net:9020/api/v1/search/?access_token=<span class="token"></span></blockquote>
+    <blockquote>curl -i <%= "#{v1_api.items_url}" %>/?access_token=<span class="token"></span></blockquote>
   </div>
-<script type="text/javascript">
-  
-  jQuery("#request_token").bind("click", function(e){
-    e.preventDefault();
-    data = { password: $("#password").val(), authorize: 'true' };
-    var target = $("#request_token_form");
-    jQuery.ajax({
-      url: '/api_keys/'+$("#api-key-id").val(),
-      dataType: 'JSON',
-      type: 'PUT',
-      data: data,
-      beforeSend: function(){
-        target.hide();
-        $("#request-token-spinner").show();
-      },
-      complete: function(){
-        $("#request-token-spinner").hide();
-      },
-      success: function(data){
-        $("#step2-intro").hide();
-        $("#request-token-message").html(data.message).show();
-        $(".token").html(data.token);
-        $("#api-ready").show();
-      },
-      error: function(request){
-        var response_message = jQuery.parseJSON(request.responseText)
-        var message = (request.status == 403) ? response_message.message : "An unknown error occurred. Support has been contacted.";
-        $("#step2-intro").hide();
-        $("#request-token-message").html(message).show();
-        if (request.status == 403){ $("#request_token_form").show()  }
-      }
-
-    });
-  });
-
-  $("#request_key").bind("click", function(e){
-    e.preventDefault();
-    var target = $("#request_key");
-    jQuery.ajax({
-      url: '<%= api_keys_path %>',
-      dataType: 'JSON',
-      type: 'POST',
-      beforeSend: function(){
-        target.hide();
-        $("#request-spinner").show();
-      },
-      complete: function(){
-        $("#request-spinner").hide();
-      },
-      success: function(data){
-        $("#step1-intro").hide();
-        $("#request-message").html(data.message).show();
-        $("#app-id").html(data.application.uid);
-        $("#api-key-id").val(data.apiKeyId);
-        $("#app-secret").html(data.application.secret);
-        $("#app-info").show();
-        $("#step-two").show(); 
-      },
-      error: function(request){
-        var message = (request.status == 403) ? request.responseText : "An unknown error occurred. Support has been contacted.";
-        $("#request-message").html(message).show();
-        if (request.status == 403){ $("#request_key").show()  }
-      }
-
-    });
-  });
-
-  
-
-</script>
