--- a/contentqa/app/views/contentqa/reporting/index.html.erb
+++ b/contentqa/app/views/contentqa/reporting/index.html.erb
@@ -19,6 +19,8 @@
 
   <tbody>
   <% @providers.each do |p| %>
+<%#= p['doc'].inspect %>
+<% #next%>
   <tr>
     <td><%= p['key'] %></td>
     <td><%= nice_est_time(p['doc']['ingestDate']) %></td>
