--- a/contentqa/app/views/contentqa/reporting/global.html.erb
+++ b/contentqa/app/views/contentqa/reporting/global.html.erb
@@ -26,10 +26,10 @@
       </colgroup>
       <th><%= check_box_tag "check_all" %> Report</th>
       <th>Status</th>
-      <% @reports.keys.each do |type| %>
+      <% @reports.each do |type| %>
         <tr>
-          <td><%= check_box_tag "reports[]", type, false, :disabled => (@reports[type][:file] or @reports[type][:job]), :class => "report_checkbox" %>&nbsp<%= type %></td>
-          <td class='<%= "#{type}" %>_status'><%= render "report_status", :report => @reports[type], :ingest_id => @global_reports_id, :type => type %>
+          <td><%= check_box_tag "reports[]", type, false, :disabled => (report[:file] or report[:job]), :class => "report_checkbox" %>&nbsp<%= type %></td>
+          <td class='<%= "#{type}" %>_status'><%= render "report_status", :report => report, :ingest_id => @global_reports_id, :type => type %>
         </tr>
       <% end %>
       <tr>
